VA-1173 Fix container wrapping

--- a/src/styles/interactive-video.css
+++ b/src/styles/interactive-video.css
@@ -413,6 +413,8 @@
   height: 100%;
   width: 100%;
   overflow-y: auto;
+  container-type: inline-size;
+  container-name: interactive_container;
 }
 
 .h5p-interactive-video .h5p-interaction-inner,
@@ -1972,8 +1974,7 @@
 }
 
 /* Styling override for primary button mixed with secondary buttons that needs to collapse at same container width */
-/* Buttons collapse if container width is below 420px and continue button is present*/
-@container (max-width: 420px) {
+@container (max-width: 400px) {
   .h5p-question-buttons:has(.h5p-theme-secondary-cta.h5p-theme-retry) .h5p-theme-primary-cta.h5p-theme-continue,
   .h5p-question-buttons:has(.h5p-theme-primary-cta.h5p-theme-continue) .h5p-theme-secondary-cta.h5p-theme-retry,
   .h5p-question-buttons:has(.h5p-theme-primary-cta.h5p-theme-continue) .h5p-theme-secondary-cta.h5p-theme-show-results {
@@ -1995,14 +1996,12 @@
   
 }
 
-.h5p-theme .h5p-question-evaluation-container.evaluation-mode {
-  grid-template-columns: repeat(auto-fit, minmax(100px, 500px));
-}
-
-.h5p-theme .h5p-question-evaluation-container.evaluation-mode .h5p-question-buttons {
-  max-width: 500px;
-}
-
-.h5p-theme .h5p-question-scorebar.h5p-question-visible {
-      margin-bottom: var(--h5p-theme-spacing-s);
+@container interactive_container (max-width: 400px) {
+  .h5p-theme .h5p-question-evaluation-container.evaluation-mode {
+      grid-template-columns: 1fr;
+  }
+  .h5p-theme .h5p-question-evaluation-container.evaluation-mode .h5p-question-buttons {
+    margin-top: var(--h5p-theme-spacing-s);
+    justify-content: center;
+  }
 }
